fixed some of the border spacing still WIP

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h2 {
+h1 {
     color:white;
     /* margin-left: 3px;
     margin-right: 3px; */
@@ -8,7 +8,8 @@ h2 {
   
 }
 .bg {
-    background-image: url("http://getwallpapers.com/wallpaper/full/2/4/3/542752.jpg"); /* The image used */
+    background-image: url("./images/hpbackground.jpg"); /* The image used */
+    
     background-color: #cccccc; /* Used if the image is unavailable */
     /* height: 500px; You must set a specified height */
     background-position: center; /* Center the image */
@@ -20,19 +21,22 @@ h2 {
       font-size: large;
       margin-bottom: 20px;
   }
-  h3 {
-    color:white;
+  h2 {
+    padding-top: 20px;
+    /* color:white;
     margin-left: 3px;
     margin-right: 3px;
     font-family: comic sans-serif;
     text-align: center;
-    padding-bottom: 15px;
+    padding-bottom: 15px; */
   }
 
-  /* .active {
-	
-	
-    background-color: beige;
+  .bgcolorgreen{
+  background-color: rgb(50, 65, 71);
+  border: solid 1px lightslategray;
+  }
+
+
   }
    */
   .navbar {
@@ -41,6 +45,10 @@ h2 {
     border-right-color: white;
   }
   
+  .borderOutline {
+    border-color: white;
+    border-width: 1px;
+  }
 
   @media (max-width: 768px) {
     .navbar-nav {
@@ -56,4 +64,25 @@ h2 {
   } */ 
 .align-list {
  
+}
+.portfolio-header {
+  color: white;
+  padding-left: 20px;
+  border-bottom: lightgray solid 1px;
+  border-top: lightslategray solid 1px;
+  margin-left: 30px;
+  margin-right: 30px;
+  /* background-color: lightgray; */
+
+}
+.navcontainerborder {
+  border-bottom: lightgray solid 1px;
+}
+.container1  {
+  margin-top: 0px !important;
+  padding: 0px !important;
+  border-right-color: white;
+  border-right: lightslategray solid 1px;
+.h2classaboutme {
+  color: black;
 }
